--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -12,7 +13,11 @@
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.3.1",
+    "react-i18next": "^11.3.4",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.1",
+    "react-scroll-parallax": "^2.3.2",
     "typescript": "^3.7.5"
   },
   "scripts": {
