--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^12.12.34",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
+    "mdbreact": "^4.25.6",
+    "nuka-carousel": "^4.6.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^5.3.1",
+    "react-hook-form": "^5.4.2",
     "react-i18next": "^11.3.4",
     "react-icons": "^3.9.0",
     "react-scripts": "3.4.1",
